# Proposal-Generator

./: .env.example  .gitignore  CLAUDE.md  Makefile  PLAN.md  PORTS.md  README.md  docker-compose.yml
.claude/: architecture-decisions.md  branding.md  coding-conventions.md  commands.md  env-vars.md  gotchas.md  implementation-status.md  memory.md  next-steps.md  project-structure.md  scratchpad.md  session-history.md  workflows.md
backend/: Dockerfile  alembic.ini  pyproject.toml  test.db
backend/app/: config.py  main.py
backend/app/api/: clients.py  dashboard.py  pricing.py  proposals.py  templates.py
backend/app/database/: session.py
backend/app/database/migrations/: env.py
backend/app/models/: __init__.py  client.py  pricing.py  proposal.py  template.py
backend/app/schemas/: client.py  pagination.py  proposal.py  template.py
backend/app/services/: ai_service.py  docx_service.py  mermaid_service.py  pdf_service.py  proposal_service.py
backend/app/templates/: pdf_template.html
backend/tests/: conftest.py
backend/tests/test_api/: test_clients.py  test_proposals.py
backend/tests/test_services/: test_mermaid.py  test_proposal_service.py
frontend/: package-lock.json  package.json
frontend/app/: layout.tsx  page.tsx
frontend/app/clients/: page.tsx
frontend/app/clients/[id]/: page.tsx
frontend/app/proposals/: page.tsx
frontend/app/proposals/[id]/: page.tsx
frontend/app/proposals/new/: page.tsx
frontend/app/settings/: page.tsx
frontend/app/templates/: page.tsx
frontend/components/: navigation.tsx
frontend/lib/: api.ts  types.ts
